형식에 맞게 코드 수정